--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body {
 .tabs {
     display: grid;
     row-gap: 3.2rem;
+    grid-template-columns: 1fr;
 }
 
 .tabs-list {
@@ -269,27 +270,32 @@ body {
 }
 
 
+.shareholders-info__tab { 
+    overflow-x: auto;
+    white-space: nowrap; 
+}
+
+
 /* Filtro de Quadro Societário */
 
 .shareholders-filter__tab-list {
-     z-index: 1000;
-    
+    z-index: 1000;
     position: sticky;
-    top: 8%;
+    top: 0;
     background-color: #fff;
     width: 100%;
-
-    padding: 2rem 0;
+    padding: 1.6rem 0;
     list-style: none;
     display: flex;
     gap: 1.2rem;
+    
 
 }
 
 .btn-filter {
 
     cursor: pointer; 
-
+    flex-shrink: 0;
     background-color: #FFF;
     border-radius: 7px;
     border: 2px solid var(--shade-main-color);
