--- a/style.css
+++ b/style.css
@@ -63,6 +63,11 @@ body {
     background-color: var(--shade-main-color);
 }
 
+.error-message {
+    color: #ef4444;
+    text-align: center;
+}
+
 /*===========================*/
 /* Campo de inserção de CNPJ */
 /*===========================*/
@@ -79,9 +84,11 @@ body {
 }
 
 .query-form {
-    position: relative;
+    max-width: 45rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
+
     gap: 1rem;
 }
 
@@ -267,6 +274,8 @@ body {
 .shareholders-form {
     display: grid;
     row-gap: 2.4rem;
+    max-height: 50rem;
+    overflow-y: scroll;
 }
 
 
@@ -289,6 +298,7 @@ body {
     display: flex;
     gap: 1.2rem;
     
+
 
 }
 
